# Keymore

./: .gitignore  Cargo.toml
src/: listener.rs  logging.rs  main.rs  process_operations.rs  visual.rs
src/actions/: mod.rs
src/daemon/: Cargo.toml
src/daemon/src/: listener.rs  main.rs  process_operations.rs  windows.rs
src/daemon/src/windows/: state.rs
src/listener/: mod.rs
src/locator/: locator.rs
src/locator/actions/: locator_finder.rs  locator_finder_tests.rs  mod.rs
src/logging/: Cargo.toml
src/logging/src/: lib.rs
src/monitor/: mod.rs
src/visual/: Cargo.toml  key_queue.rs  layout.rs  locatiors_trie_node_tests.rs  locators_canvas.rs  locators_canvas_tests.rs  locators_transparant_layout.rs  locators_trie_node.rs  mod.rs  test_helpers.rs  visual_mod_tests.rs
src/visual/components/: mod.rs
src/visual/layout/: tests.rs  transparent_layout.rs  vignette_canvas.rs
src/visual/layout/locators/: locators_canvas.rs
src/visual/layout/tests/: locatiors_trie_node_tests.rs  locators_canvas_tests.rs  test_helpers.rs  visual_mod_tests.rs
src/visual/locators_transparant_layout/: locatiors_trie_node_tests.rs  locators_canvas.rs  locators_canvas_tests.rs  locators_trie_node.rs  transparent_layout.rs  visual_mod_tests.rs
src/visual/src/: lib.rs  main.rs  vignette_canvas.rs  visual_root.rs
src/visual/src/locators_canvas/: locators_trie_node.rs  mod.rs
src/visual/tests/: locatiors_trie_node_tests.rs  locators_canvas_tests.rs
src/visual/tests/test_helpers/: mod.rs
src/windows/locator/: locator.rs  mod.rs
src/windows/monitor/: mod.rs
src/windows_operations/: Cargo.toml
src/windows_operations/src/: lib.rs
src/windows_operations/src/actions/: mod.rs
src/windows_operations/src/locator/: locator.rs
src/windows_operations/src/locator/actions/: locator_finder.rs  locator_finder_tests.rs
(+9 files in other folders)
