[package]
name = "Keymore"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["canvas"] }
screen_size = "0.1.0"
windows = { version = "0.59.0", features = ["Win32_System_Com", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Accessibility", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
